# Hall_Canteen_Backend

./: .env.example  .gitignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/dependencies/: auth.py
app/api/v1/endpoints/: auth.py  partner.py
app/core/: config.py  cookies.py  emails.py  errors.py  firebase.py  logging.py  redis.py  security.py  storage.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_create_users.py  0002_rename_roles.py  0003_partner_tables.py  0004_user_avatar.py  0005_delivery_slots.py  0006_food_item_slots.py
app/db/models/: __init__.py  delivery_slot.py  food_item.py  partner_application.py  restaurant.py  user.py
app/repositories/: partner.py  user.py
app/schemas/: auth.py  partner.py
app/services/: auth.py  partner.py  session.py
docker/postgres/: init.sql
docs/: ARCHITECTURE.md  login.md  r2_storage_documentation.md  registration.md
